--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -17,14 +17,11 @@ blocks:
             - export WORKSPACE=$SEM_WORKSPACE/librdkafka
             - cd $WORKSPACE
             - mkdir dest artifacts
-            - ./configure --install-deps --source-deps-only --disable-lz4-ext --prefix="$WORKSPACE/dest" --enable-strip
+            - ./configure --install-deps --source-deps-only --enable-static --disable-lz4-ext --prefix="$WORKSPACE/dest" --enable-strip
             - make -j2 all examples check
             - make -j2 -C tests build
             - make -C tests run_local_quick
             - make install
-            - which ar
-            - brew list
-            - brew list --cask
             - cd $WORKSPACE/dest
             - tar cvzf ${WORKSPACE}/artifacts/librdkafka-${CC}.tar.gz .
             - artifact push job ${WORKSPACE}/artifacts/librdkafka-${CC}.tar.gz
