Fix LNK2019 with curl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,15 +54,10 @@ endif()
 # }
 
 # CURL {
-find_package(CURL QUIET)
-if(CURL_FOUND)
-  set(with_curl_default ON)
-else()
-  set(with_curl_default OFF)
-endif()
-option(WITH_CURL "With CURL" ${with_curl_default})
+option(WITH_CURL "With CURL" OFF)
 if(WITH_CURL)
   list(APPEND BUILT_WITH "CURL")
+  find_package(CURL CONFIG REQUIRED)
 endif()
 # }
 
