--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -2,7 +2,7 @@ version: v1.0
 name: M1 Pipeline
 agent:
   machine:
-    type: s1-prod-mac-m1
+    type: s1-prod-macos-arm64
 blocks:
   - name: 'Build, Test, Package'
     task:
