--- a/win32/tests/tests.vcxproj
+++ b/win32/tests/tests.vcxproj
@@ -213,6 +213,7 @@
     <ClCompile Include="..\..\tests\0130-store_offsets.c" />
     <ClCompile Include="..\..\tests\0131-connect_timeout.c" />
     <ClCompile Include="..\..\tests\0132-strategy_ordering.c" />
+    <ClCompile Include="..\..\tests\0133-ssl_keys_ut.c" />
     <ClCompile Include="..\..\tests\8000-idle.cpp" />
     <ClCompile Include="..\..\tests\test.c" />
     <ClCompile Include="..\..\tests\testcpp.cpp" />
