--- a/tests/fixtures/ssl/Makefile
+++ b/tests/fixtures/ssl/Makefile
@@ -1,12 +1,8 @@
-CA_PASSWORD?=strong_password
-PASSWORD?=strong_password
-OUTPUT_FOLDER=.
-
 ssl_keys: clear_keys
-	@./create_keys.sh
+	@CNS="client client2" ./create_keys.sh
 
 clear_keys:
-	@(cd $(OUTPUT_FOLDER) && rm -f *.key *.crt *.jks \
-	*.csr *.pem *.p12 *.srl extfile)
+	@rm -f *.key *.crt *.jks \
+	*.csr *.pem *.p12 *.srl extfile
 
 .PHONY: ssl_keys
