--- a/win32/tests/tests.vcxproj
+++ b/win32/tests/tests.vcxproj
@@ -215,6 +215,7 @@
     <ClCompile Include="..\..\tests\0132-strategy_ordering.c" />
     <ClCompile Include="..\..\tests\0133-ssl_keys.c" />
     <ClCompile Include="..\..\tests\0134-ssl_provider.c" />
+    <ClCompile Include="..\..\tests\0135-sasl_credentials.cpp" />
     <ClCompile Include="..\..\tests\8000-idle.cpp" />
     <ClCompile Include="..\..\tests\test.c" />
     <ClCompile Include="..\..\tests\testcpp.cpp" />
