Change src and src-cpp to use the new public API header locations

--- a/src-cpp/Makefile
+++ b/src-cpp/Makefile
@@ -11,6 +11,8 @@ HDRS=		../include/librdkafka/rdkafkacpp.h
 
 OBJS=		$(CXXSRCS:%.cpp=%.o)
 
+CFLAGS += -I../include
+CXXFLAGS += -I../include
 
 
 all: lib check
