--- a/examples/Makefile
+++ b/examples/Makefile
@@ -2,8 +2,11 @@ EXAMPLES ?= rdkafka_example rdkafka_performance rdkafka_example_cpp \
 	rdkafka_complex_consumer_example rdkafka_complex_consumer_example_cpp \
 	kafkatest_verifiable_client \
 	producer consumer idempotent_producer transactions \
+	delete_records \
 	openssl_engine_example_cpp \
-	admin \
+	describe_groups \
+	list_group_offsets \
+	alter_group_offsets \
 	misc
 
 all: $(EXAMPLES)
@@ -56,7 +59,19 @@ transactions-older-broker.c: ../src/librdkafka.a transactions-older-broker.c
 	$(CC) $(CPPFLAGS) $(CFLAGS) $@.c -o $@ $(LDFLAGS) \
 		../src/librdkafka.a $(LIBS)
 
-admin: ../src/librdkafka.a admin.c
+delete_records: ../src/librdkafka.a delete_records.c
+	$(CC) $(CPPFLAGS) $(CFLAGS) $@.c -o $@ $(LDFLAGS) \
+		../src/librdkafka.a $(LIBS)
+
+describe_groups: ../src/librdkafka.a describe_groups.c
+	$(CC) $(CPPFLAGS) $(CFLAGS) $@.c -o $@ $(LDFLAGS) \
+		../src/librdkafka.a $(LIBS)
+
+list_group_offsets: ../src/librdkafka.a list_group_offsets.c
+	$(CC) $(CPPFLAGS) $(CFLAGS) $@.c -o $@ $(LDFLAGS) \
+		../src/librdkafka.a $(LIBS)
+
+alter_group_offsets: ../src/librdkafka.a alter_group_offsets.c
 	$(CC) $(CPPFLAGS) $(CFLAGS) $@.c -o $@ $(LDFLAGS) \
 		../src/librdkafka.a $(LIBS)
 
