rd_kafka_ListGroups admin call

--- a/examples/.gitignore
+++ b/examples/.gitignore
@@ -13,6 +13,7 @@ rdkafka_example
 rdkafka_example_cpp
 rdkafka_performance
 transactions
+list_groups
 describe_groups
 list_group_offsets
 alter_group_offsets
