conditionally include rdrandr in cmakelists

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -56,7 +56,6 @@ set(
     rdlog.c
     rdmurmur2.c
     rdports.c
-    rdrandr.c
     rdrand.c
     rdregex.c
     rdstring.c
@@ -122,6 +121,10 @@ endif()
 
 if(NOT HAVE_REGEX)
   list(APPEND sources regexp.c)
+endif()
+
+if(NOT HAVE_RAND_R)
+  list(APPEND sources rdrandr.c)
 endif()
 
 # Define flags with cmake instead of by defining them on win32_config.h
