--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -127,6 +127,7 @@ set(
     0134-ssl_provider.c
     0135-sasl_credentials.cpp
     0136-resolve_cb.c
+    0137-barrier_batch_consume.c
     8000-idle.cpp
     test.c
     testcpp.cpp
