--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -75,9 +75,9 @@ blocks:
       jobs:
         - name: 'Style check'
           commands:
-            - sudo apt install -y clang-format python3 python3-pip python3-setuptools
+            - sudo apt install -y clang-format-10 python3 python3-pip python3-setuptools
             - python3 -m pip install -r packaging/tools/requirements.txt
-            - make style-check
+            - CLANG_FORMAT=clang-format-10 make style-check
 
 
   - name: 'Build documentation'
