--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -280,9 +280,9 @@ blocks:
           # Setup vcpkg
           - "& .\\librdkafka\\win32\\setup-vcpkg.ps1"
           - cd librdkafka
-          - vcpkg integrate install
+          - ..\vcpkg\vcpkg integrate install
           # Install required packages.
-          - vcpkg --feature-flags=versions install --triplet $Env:triplet
+          - ..\vcpkg\vcpkg --feature-flags=versions install --triplet $Env:triplet
           - cd ..
           - pwd
           # Store vcpkg caches
