Implement KIP-88, KIP-222, KIP-518 and partially KIP-396 (#3995)
Add support for:
KIP-88,
KIP-222: ListConsumerGroups, DescribeConsumerGroups, ListConsumerGroupOffsets,
KIP-396: AlterConsumerGroupOffsets,
KIP-518.

Co-authored-by: Lester Fan <lfan77@bloomberg.net>
Co-authored-by: Magnus Edenhill <magnus@edenhill.se>
Co-authored-by: Milind L <miluthra@confluent.io>

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,6 +4,10 @@ EXAMPLES ?= rdkafka_example rdkafka_performance rdkafka_example_cpp \
 	producer consumer idempotent_producer transactions \
 	delete_records \
 	openssl_engine_example_cpp \
+	list_consumer_groups \
+	describe_consumer_groups \
+	list_consumer_group_offsets \
+	alter_consumer_group_offsets \
 	misc
 
 all: $(EXAMPLES)
@@ -57,6 +61,22 @@ transactions-older-broker.c: ../src/librdkafka.a transactions-older-broker.c
 		../src/librdkafka.a $(LIBS)
 
 delete_records: ../src/librdkafka.a delete_records.c
+	$(CC) $(CPPFLAGS) $(CFLAGS) $@.c -o $@ $(LDFLAGS) \
+		../src/librdkafka.a $(LIBS)
+
+list_consumer_groups: ../src/librdkafka.a list_consumer_groups.c
+	$(CC) $(CPPFLAGS) $(CFLAGS) $@.c -o $@ $(LDFLAGS) \
+		../src/librdkafka.a $(LIBS)
+
+describe_consumer_groups: ../src/librdkafka.a describe_consumer_groups.c
+	$(CC) $(CPPFLAGS) $(CFLAGS) $@.c -o $@ $(LDFLAGS) \
+		../src/librdkafka.a $(LIBS)
+
+list_consumer_group_offsets: ../src/librdkafka.a list_consumer_group_offsets.c
+	$(CC) $(CPPFLAGS) $(CFLAGS) $@.c -o $@ $(LDFLAGS) \
+		../src/librdkafka.a $(LIBS)
+
+alter_consumer_group_offsets: ../src/librdkafka.a alter_consumer_group_offsets.c
 	$(CC) $(CPPFLAGS) $(CFLAGS) $@.c -o $@ $(LDFLAGS) \
 		../src/librdkafka.a $(LIBS)
 
