--- a/examples/.gitignore
+++ b/examples/.gitignore
@@ -1,13 +1,19 @@
-rdkafka_example
-rdkafka_performance
-rdkafka_example_cpp
-rdkafka_complex_consumer_example
-rdkafka_complex_consumer_example_cpp
+consumer
+delete_records
+idempotent_producer
 kafkatest_verifiable_client
+misc
+openssl_engine_example_cpp
 producer
 producer_cpp
-consumer
-idempotent_producer
+rdkafka_complex_consumer_example
+rdkafka_complex_consumer_example_cpp
 rdkafka_consume_batch
+rdkafka_example
+rdkafka_example_cpp
+rdkafka_performance
 transactions
-delete_records
+list_consumer_groups
+describe_consumer_groups
+list_consumer_group_offsets
+alter_consumer_group_offsets
