describe topics and cluster

--- a/examples/.gitignore
+++ b/examples/.gitignore
@@ -15,5 +15,7 @@ rdkafka_performance
 transactions
 list_consumer_groups
 describe_consumer_groups
+describe_topics
+describe_cluster
 list_consumer_group_offsets
 alter_consumer_group_offsets
