--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -304,8 +304,8 @@ blocks:
             - name: ARTIFACT_KEY
               value: p-librdkafka__plat-windows__dist-msvc__arch-x64__lnk-std
           commands:
-            - "& .\\win32\\msbuild.ps1 -config Release -platform x64"
-            - "& .\\win32\\package-nuget.ps1"
+            - "& .\\win32\\msbuild.ps1 -platform x64"
+            - "& .\\win32\\package-zip.ps1 -platform x64"
         - name: 'Build: MSVC x86'
           env_vars:
             - name: triplet
@@ -313,8 +313,8 @@ blocks:
             - name: ARTIFACT_KEY
               value: p-librdkafka__plat-windows__dist-msvc__arch-x86__lnk-std
           commands:
-            - "& .\\win32\\msbuild.ps1 -config Release -platform Win32"
-            - "& .\\win32\\package-nuget.ps1"
+            - "& .\\win32\\msbuild.ps1 -platform Win32"
+            - "& .\\win32\\package-zip.ps1 -platform Win32"
 
   # - name: 'Packaging'
   #   dependencies:
